kubernetes/apps/monitoring/kubernetes-dashboard/app/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/target: "internal.${SECRET_DOMAIN}"
spec:
  hostnames: ["kubernetes.${SECRET_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /metrics
      backendRefs:
        - name: kubernetes-dashboard-metrics-scraper
          namespace: monitoring
          port: 8000
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/login
        - path:
            type: PathPrefix
            value: /api/v1/csrftoken/login
        - path:
            type: PathPrefix
            value: /api/v1/me
      backendRefs:
        - name: kubernetes-dashboard-auth
          namespace: monitoring
          port: 8000
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: kubernetes-dashboard-api
          namespace: monitoring
          port: 8000
          weight: 1
    - backendRefs:
        - name: kubernetes-dashboard-web
          namespace: monitoring
          port: 8000
          weight: 1
